# concurrency-classics

./: CMakeLists.txt  assignment1.txt  evaluation.md
cpp/: cigarette_smokers.cpp  cigarette_smokers_csp.cpp  csp.hpp  dining_philosophers.cpp  dining_philosophers_csp.cpp  dummy_worker.hpp  h2o.cpp  h2o_csp.cpp  river_crossing.cpp  river_crossing.hpp  river_crossing_2.cpp  river_crossing_csp.cpp  santa_claus.cpp  santa_claus_2.cpp  santa_claus_3.cpp  santa_claus_4.cpp  sleeping_barber.cpp  sleeping_barber_csp.cpp  test_condition_variable.cpp  util.hpp
